hphp/hack/test/typecheck/shape/key_exists_refines_many.php.like_types.exp
File "key_exists_refines_many.php", line 24, characters 25-27:
Invalid argument (Typing[4110])
File "key_exists_refines_many.php", line 24, characters 25-27:
Expected shape(?'example_1' => [unresolved], ...) because Shapes::idx expects a shape
File "key_exists_refines_many.php", line 3, characters 22-380:
But got dynamic because it is an unenforceable type
